added xp section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -14,8 +14,9 @@
         <div class="max-width">
             <div class="logo"><a href="">jeph</a></div>
             <ul class="menu">
-                <li><a href="">home</a></li> 
-                <li><a href="">xp</a></li>
+                <li><a href="">home</a></li>
+                <li><a href="#me">me</a></li>
+                <li><a href="#xp">xp</a></li>
                 <li><a href="">skills</a></li>
                 <li><a href="">contacts</a></li>
             </ul>
@@ -28,16 +29,59 @@
     <!-- home -->
     <section class="home" id="home">
         <div class="max-width">
+
             <div class="home-content">
                 <div class="hello-text">hola! i'm<br></div>
                 <div class="jeph">jeph</div>
             </div>
         </div>
-    </section> 
+    </section>
 
-
-    <p><br><br><br><br><br><br><br><br><br><br></p>
     <script src="script.js"></script>
+
+    <!-- about me! -->
+    <section class="me" id="me">
+        <div class="max-width">
+            <h2 class="title">Who? Me?</h2>
+            <div class="about-me">
+                <p>I am Jeph. Currently an undergraduate student seeking an internship that could enhance my magic and skill in Umbran Magic and marksmanship in Bullet Arts. Bayonetta, you're a mystery. You come along with a destinyyyyy</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- xp -->
+    <section class="xp" id="xp">
+        <div class="max-width">
+            <h1 class="title">experiences and involvements</h1>
+            <h2 class="org-title">Google Developer Student Clubs USTP</h2><br>
+            <div class="xp-inv">    
+                <div class="left">
+                    <img src="org-logos/GDSC.png" alt="Google Developer Student Clubs USTP">
+                </div>
+                <div class="right">
+                    <p>Google Developer Student Clubs USTP's mission is to bridge the gap between theory and practice. Currently the Chief Community Development Officer, and the former Acting Chief Technology Officer, and Internal Relations Officer.</p>
+                  <!-- <a href="">GDSC USTP Facebook Page</a>-->  
+                </div>
+            </div>
+
+            <h2 class="org-title">WeCARE</h2><br>
+            <div class="xp-inv">    
+                <div class="left">
+                    <img src="org-logos/WECARE.png" alt="We CARE USTP">
+                </div>
+                <div class="right">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ac faucibus odio. Quisque iaculis ante in elementum accumsan. Sed at odio nec ex facilisis laoreet id efficitur urna. Duis ut lobortis mauris, sed vulputate dolor. Ut cursus, justo eget egestas ultricies, turpis lorem mattis nulla, non mollis erat erat a enim </p>
+                  <!-- <a href="">GDSC USTP Facebook Page</a>-->  
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+
+    <p></p>
+
 </body>
 
 </html>
