--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
@@ -14,7 +15,7 @@
         <div class="max-width">
             <div class="logo"><a href="">jeph</a></div>
             <ul class="menu">
-                <li><a href="">home</a></li>
+                <li><a href="#home">home</a></li>
                 <li><a href="#me">me</a></li>
                 <li><a href="#xp">xp</a></li>
                 <li><a href="">skills</a></li>
