--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="max-width">
             <h2 class="title">Who? Me?</h2>
             <div class="about-me">
-                <p>I am Jeph. Currently an undergraduate student seeking an internship that could enhance my magic and skill in Umbran Magic and marksmanship in Bullet Arts. Bayonetta, you're a mystery. You come along with a destinyyyyy</p>
+                <p>I am Jeph. Currently an undergraduate student seeking an internship to enhance my skills in coding, and everything dev</p>
             </div>
         </div>
     </section>
@@ -71,7 +71,7 @@
                     <img src="org-logos/WECARE.png" alt="We CARE USTP">
                 </div>
                 <div class="right">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ac faucibus odio. Quisque iaculis ante in elementum accumsan. Sed at odio nec ex facilisis laoreet id efficitur urna. Duis ut lobortis mauris, sed vulputate dolor. Ut cursus, justo eget egestas ultricies, turpis lorem mattis nulla, non mollis erat erat a enim </p>
+                    <p>A university-recognized extra-curricular organization that has the mission to help fellow students with their mental health. Currently the Chief Technology Officer for the Android-iOS mobile application.</p>
                   <!-- <a href="">GDSC USTP Facebook Page</a>-->  
                 </div>
             </div>
