updated xp section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#me">me</a></li>
                 <li><a href="#xp">xp</a></li>
                 <li><a href="">skills</a></li>
+                <li><a href="">projects</a></li>
                 <li><a href="">contacts</a></li>
             </ul>
             <div class="hamburger-menu">
@@ -60,7 +61,9 @@
                     <img src="org-logos/GDSC.png" alt="Google Developer Student Clubs USTP">
                 </div>
                 <div class="right">
-                    <p>Google Developer Student Clubs USTP's mission is to bridge the gap between theory and practice. Currently the Chief Community Development Officer, and the former Acting Chief Technology Officer, and Internal Relations Officer.</p>
+                    <p>Google Developer Student Clubs USTP's mission is to bridge the gap between theory and practice. 
+                        Currently the Chief Community Development Officer, and the former Acting Chief Technology Officer, 
+                        and Internal Relations Officer.</p>
                   <!-- <a href="">GDSC USTP Facebook Page</a>-->  
                 </div>
             </div>
@@ -71,10 +74,41 @@
                     <img src="org-logos/WECARE.png" alt="We CARE USTP">
                 </div>
                 <div class="right">
-                    <p>A university-recognized extra-curricular organization that has the mission to help fellow students with their mental health. Currently the Chief Technology Officer for the Android-iOS mobile application.</p>
+                    <p>A university-recognized extra-curricular organization that has the mission to help 
+                        fellow students with their mental health. Currently the Chief Technology Officer 
+                        for the Android-iOS mobile application.</p>
                   <!-- <a href="">GDSC USTP Facebook Page</a>-->  
                 </div>
             </div>
+
+            <h2 class="org-title">Federation of Accredited Extra-Curricular Student Organizations USTP</h2><br>
+            <div class="xp-inv">    
+                <div class="left">
+                    <img src="org-logos/FAESO2.png" alt="FAESO USTP">
+                </div>
+                <div class="right">
+                    <p>Currently serving as a Junior Deputy. FAESO USTP is the mother organization of all Extra-Curricular Student Organizations 
+                        in the University of Science and Technology of Southern Philippines. 
+                        The organization and its members support and collaborate with all accredited extra-curricular organizations 
+                        to support their respective mission, vision, and goals</p>
+                  <!-- <a href="">GDSC USTP Facebook Page</a>-->  
+                </div>
+            </div>
+
+            <h2 class="org-title">Institute of Computer Engineers of the Philippines - Student Edition USTP</h2><br>
+            <div class="xp-inv">    
+                <div class="left">
+                    <img src="org-logos/ICPEP.png" alt="FAESO USTP">
+                </div>
+                <div class="right">
+                    <p>A nationally-recognized Computer Engineering organization that is part of ICPEP Region X. Served as 
+                        the USTP chapter's Public Information Officer Internal, and currently a Volunter Resources Head, and 
+                        the organization's website project manager for two years... and counting.
+                    </p>
+                  <!-- <a href="">GDSC USTP Facebook Page</a>-->  
+                </div>
+            </div>
+           
 
         </div>
 
