--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#home">home</a></li>
                 <li><a href="#me">me</a></li>
                 <li><a href="#xp">xp</a></li>
-                <li><a href="">skills</a></li>
+                <li><a href="#skills">skills</a></li>
                 <li><a href="">projects</a></li>
                 <li><a href="">contacts</a></li>
             </ul>
@@ -111,6 +111,47 @@
            
 
         </div>
+
+    </section>
+
+    <!-- xp -->
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h1 class="title">skills and professional development</h1>
+            <h2 class="sktitle">Coding and Tutor</h2>
+            <p class="desc">I have been coding for almost 5 years. Knows how to code C, C++, Java, and Python.
+                I am also familiar with Object Oriented Programming. Served as a peer tutor for C and Java. Familiar with
+                the concepts of AI/ML for Python. Currently immersed in front-end web development.<br>
+            </p>
+
+            <h2 class="sktitle">My Tech Stack</h2>
+            <p class="desc">I have been immersed to these technologies, and reviewing them wouldn't be a problem.
+                You know what they say, always prepare different weapons for a war.<br>
+            </p>
+            <div class="techstack">
+                <img src="techstack/HTML.png">
+                <img src="techstack/CCS3.png">
+                <img src="techstack/C++.png">
+                <img src="techstack/C.png">
+                <img src="techstack/JS.png">
+                <img src="techstack/Java.png">
+                <img src="techstack/NodeJs.png">
+                <img src="techstack/React.png">
+                <img src="techstack/Java Android.png">
+                <img src="techstack/Firebase.png">
+                <img src="techstack/ReactFirebase.png">
+                <img src="techstack/Gatsby.png">
+                <img src="techstack/Python.png">
+                <img src="techstack/PHP.png">
+                <img src="techstack/MySQL.png">
+            </div>
+
+            <h2 class="sktitle">Content Making and Writing</h2>
+            <p class="desc">I really like to write, and I took advantage of this skill when I was the Internal Relations Officer
+                of Google Developer Student Clubs USTP to make comprehensive and concise reports. Writing blogs and always trying
+                 not to bore my audience when I am presenting has always been something that I enjoy doing.  <br>
+            </p>
+
 
     </section>
 
