--- a/index.html
+++ b/index.html
@@ -2,161 +2,162 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <meta author="Jephersonn" />
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="max-width">
-            <div class="logo"><a href="">jeph</a></div>
-            <ul class="menu">
-                <li><a href="#home">home</a></li>
-                <li><a href="#me">me</a></li>
-                <li><a href="#xp">xp</a></li>
-                <li><a href="#skills">skills</a></li>
-                <li><a href="">projects</a></li>
-                <li><a href="">contacts</a></li>
-            </ul>
-            <div class="hamburger-menu">
-                <i class="fas fa-bars"></i>
-            </div>
+  <nav class="navbar">
+    <div class="max-width">
+      <div class="logo"><a href="">jeph</a></div>
+      <ul class="menu">
+        <li><a href="#home">home</a></li>
+        <li><a href="#me">me</a></li>
+        <li><a href="#xp">xp</a></li>
+        <li><a href="#skills">skills</a></li>
+        <li><a href="">projects</a></li>
+        <li><a href="">contacts</a></li>
+      </ul>
+      <div class="hamburger-menu">
+        <i class="fas fa-bars"></i>
+      </div>
+    </div>
+  </nav>
+
+  <!-- home -->
+  <section class="home" id="home">
+    <div class="max-width">
+
+      <div class="home-content">
+        <div class="hello-text">hola! i'm<br></div>
+        <div class="jeph">jeph</div>
+      </div>
+    </div>
+  </section>
+
+  <script src="script.js"></script>
+
+  <!-- about me! -->
+  <section class="me" id="me">
+    <div class="max-width">
+      <h2 class="title">Who? Me?</h2>
+      <div class="about-me">
+        <p>I am Jeph. Currently an undergraduate student seeking an internship to enhance my skills in coding, and everything dev</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- xp -->
+  <section class="xp" id="xp">
+    <div class="max-width">
+      <h1 class="title">experiences and involvements</h1>
+      <h2 class="org-title">Google Developer Student Clubs USTP</h2><br>
+      <div class="xp-inv">
+        <div class="left">
+          <img src="org-logos/GDSC.png" alt="Google Developer Student Clubs USTP">
         </div>
-    </nav>
-
-    <!-- home -->
-    <section class="home" id="home">
-        <div class="max-width">
-
-            <div class="home-content">
-                <div class="hello-text">hola! i'm<br></div>
-                <div class="jeph">jeph</div>
-            </div>
+        <div class="right">
+          <p>Google Developer Student Clubs USTP's mission is to bridge the gap between theory and practice.
+            Currently the Chief Community Development Officer, and the former Acting Chief Technology Officer,
+            and Internal Relations Officer.</p>
+          <!-- <a href="">GDSC USTP Facebook Page</a>-->
         </div>
-    </section>
+      </div>
 
-    <script src="script.js"></script>
-
-    <!-- about me! -->
-    <section class="me" id="me">
-        <div class="max-width">
-            <h2 class="title">Who? Me?</h2>
-            <div class="about-me">
-                <p>I am Jeph. Currently an undergraduate student seeking an internship to enhance my skills in coding, and everything dev</p>
-            </div>
+      <h2 class="org-title">WeCARE</h2><br>
+      <div class="xp-inv">
+        <div class="left">
+          <img src="org-logos/WECARE.png" alt="We CARE USTP">
         </div>
-    </section>
-
-    <!-- xp -->
-    <section class="xp" id="xp">
-        <div class="max-width">
-            <h1 class="title">experiences and involvements</h1>
-            <h2 class="org-title">Google Developer Student Clubs USTP</h2><br>
-            <div class="xp-inv">    
-                <div class="left">
-                    <img src="org-logos/GDSC.png" alt="Google Developer Student Clubs USTP">
-                </div>
-                <div class="right">
-                    <p>Google Developer Student Clubs USTP's mission is to bridge the gap between theory and practice. 
-                        Currently the Chief Community Development Officer, and the former Acting Chief Technology Officer, 
-                        and Internal Relations Officer.</p>
-                  <!-- <a href="">GDSC USTP Facebook Page</a>-->  
-                </div>
-            </div>
-
-            <h2 class="org-title">WeCARE</h2><br>
-            <div class="xp-inv">    
-                <div class="left">
-                    <img src="org-logos/WECARE.png" alt="We CARE USTP">
-                </div>
-                <div class="right">
-                    <p>A university-recognized extra-curricular organization that has the mission to help 
-                        fellow students with their mental health. Currently the Chief Technology Officer 
-                        for the Android-iOS mobile application.</p>
-                  <!-- <a href="">GDSC USTP Facebook Page</a>-->  
-                </div>
-            </div>
-
-            <h2 class="org-title">Federation of Accredited Extra-Curricular Student Organizations USTP</h2><br>
-            <div class="xp-inv">    
-                <div class="left">
-                    <img src="org-logos/FAESO2.png" alt="FAESO USTP">
-                </div>
-                <div class="right">
-                    <p>Currently serving as a Junior Deputy. FAESO USTP is the mother organization of all Extra-Curricular Student Organizations 
-                        in the University of Science and Technology of Southern Philippines. 
-                        The organization and its members support and collaborate with all accredited extra-curricular organizations 
-                        to support their respective mission, vision, and goals</p>
-                  <!-- <a href="">GDSC USTP Facebook Page</a>-->  
-                </div>
-            </div>
-
-            <h2 class="org-title">Institute of Computer Engineers of the Philippines - Student Edition USTP</h2><br>
-            <div class="xp-inv">    
-                <div class="left">
-                    <img src="org-logos/ICPEP.png" alt="FAESO USTP">
-                </div>
-                <div class="right">
-                    <p>A nationally-recognized Computer Engineering organization that is part of ICPEP Region X. Served as 
-                        the USTP chapter's Public Information Officer Internal, and currently a Volunter Resources Head, and 
-                        the organization's website project manager for two years... and counting.
-                    </p>
-                  <!-- <a href="">GDSC USTP Facebook Page</a>-->  
-                </div>
-            </div>
-           
-
+        <div class="right">
+          <p>A university-recognized extra-curricular organization that has the mission to help
+            fellow students with their mental health. Currently the Chief Technology Officer
+            for the Android-iOS mobile application.</p>
+          <!-- <a href="">GDSC USTP Facebook Page</a>-->
         </div>
+      </div>
 
-    </section>
+      <h2 class="org-title">Federation of Accredited Extra-Curricular Student Organizations USTP</h2><br>
+      <div class="xp-inv">
+        <div class="left">
+          <img src="org-logos/FAESO2.png" alt="FAESO USTP">
+        </div>
+        <div class="right">
+          <p>Currently serving as a Junior Deputy. FAESO USTP is the mother organization of all Extra-Curricular Student Organizations
+            in the University of Science and Technology of Southern Philippines.
+            The organization and its members support and collaborate with all accredited extra-curricular organizations
+            to support their respective mission, vision, and goals</p>
+          <!-- <a href="">GDSC USTP Facebook Page</a>-->
+        </div>
+      </div>
 
-    <!-- xp -->
-    <section class="skills" id="skills">
-        <div class="max-width">
-            <h1 class="title">skills and professional development</h1>
-            <h2 class="sktitle">Coding and Tutor</h2>
-            <p class="desc">I have been coding for almost 5 years. Knows how to code C, C++, Java, and Python.
-                I am also familiar with Object Oriented Programming. Served as a peer tutor for C and Java. Familiar with
-                the concepts of AI/ML for Python. Currently immersed in front-end web development.<br>
-            </p>
-
-            <h2 class="sktitle">My Tech Stack</h2>
-            <p class="desc">I have been immersed to these technologies, and reviewing them wouldn't be a problem.
-                You know what they say, always prepare different weapons for a war.<br>
-            </p>
-            <div class="techstack">
-                <img src="techstack/HTML.png">
-                <img src="techstack/CCS3.png">
-                <img src="techstack/C++.png">
-                <img src="techstack/C.png">
-                <img src="techstack/JS.png">
-                <img src="techstack/Java.png">
-                <img src="techstack/NodeJs.png">
-                <img src="techstack/React.png">
-                <img src="techstack/Java Android.png">
-                <img src="techstack/Firebase.png">
-                <img src="techstack/ReactFirebase.png">
-                <img src="techstack/Gatsby.png">
-                <img src="techstack/Python.png">
-                <img src="techstack/PHP.png">
-                <img src="techstack/MySQL.png">
-            </div>
-
-            <h2 class="sktitle">Content Making and Writing</h2>
-            <p class="desc">I really like to write, and I took advantage of this skill when I was the Internal Relations Officer
-                of Google Developer Student Clubs USTP to make comprehensive and concise reports. Writing blogs and always trying
-                 not to bore my audience when I am presenting has always been something that I enjoy doing. <br>
-            </p>
+      <h2 class="org-title">Institute of Computer Engineers of the Philippines - Student Edition USTP</h2><br>
+      <div class="xp-inv">
+        <div class="left">
+          <img src="org-logos/ICPEP.png" alt="FAESO USTP">
+        </div>
+        <div class="right">
+          <p>A nationally-recognized Computer Engineering organization that is part of ICPEP Region X. Served as
+            the USTP chapter's Public Information Officer Internal, and currently a Volunter Resources Head, and
+            the organization's website project manager for two years... and counting.
+          </p>
+          <!-- <a href="">GDSC USTP Facebook Page</a>-->
+        </div>
+      </div>
 
 
-    </section>
+    </div>
+
+  </section>
+
+  <!-- xp -->
+  <section class="skills" id="skills">
+    <div class="max-width">
+      <h1 class="title">skills and professional development</h1>
+      <h2 class="sktitle">Coding and Tutor</h2>
+      <p class="desc">I have been coding for almost 5 years. Knows how to code C, C++, Java, and Python.
+        I am also familiar with Object Oriented Programming. Served as a peer tutor for C and Java. Familiar with
+        the concepts of AI/ML for Python. Currently immersed in front-end web development.<br>
+      </p>
+
+      <h2 class="sktitle">My Tech Stack</h2>
+      <p class="desc">I have been immersed to these technologies, and reviewing them wouldn't be a problem.
+        You know what they say, always prepare different weapons for a war.<br>
+      </p>
+      <div class="techstack">
+        <img src="techstack/HTML.png">
+        <img src="techstack/CCS3.png">
+        <img src="techstack/C++.png">
+        <img src="techstack/C.png">
+        <img src="techstack/JS.png">
+        <img src="techstack/Java.png">
+        <img src="techstack/NodeJs.png">
+        <img src="techstack/React.png">
+        <img src="techstack/Java Android.png">
+        <img src="techstack/Firebase.png">
+        <img src="techstack/ReactFirebase.png">
+        <img src="techstack/Gatsby.png">
+        <img src="techstack/Python.png">
+        <img src="techstack/PHP.png">
+        <img src="techstack/MySQL.png">
+      </div>
+
+      <h2 class="sktitle">Content Making and Writing</h2>
+      <p class="desc">I really like to write, and I took advantage of this skill when I was the Internal Relations Officer
+        of Google Developer Student Clubs USTP to make comprehensive and concise reports. Writing blogs and always trying
+        not to bore my audience when I am presenting has always been something that I enjoy doing. <br>
+      </p>
 
 
-    <p></p>
+  </section>
+
+
+  <p></p>
 
 </body>
 
