updated tech stack

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <li><a href="#me">me</a></li>
         <li><a href="#xp">xp</a></li>
         <li><a href="#skills">skills</a></li>
-        <li><a href="">projects</a></li>
-        <li><a href="">contacts</a></li>
+        <li><a href="#projects">projects</a></li>
+        <li><a href="#connect">connect</a></li>
       </ul>
       <div class="hamburger-menu">
         <i class="fas fa-bars"></i>
@@ -119,33 +119,40 @@
   <section class="skills" id="skills">
     <div class="max-width">
       <h1 class="title">skills and professional development</h1>
-      <h2 class="sktitle">Coding and Tutor</h2>
-      <p class="desc">I have been coding for almost 5 years. Knows how to code C, C++, Java, and Python.
-        I am also familiar with Object Oriented Programming. Served as a peer tutor for C and Java. Familiar with
-        the concepts of AI/ML for Python. Currently immersed in front-end web development.<br>
-      </p>
+      <table>
+      <tr>
+        <td style="width:40%">
+          <h2 class="sktitle">My Tech Stack</h2>
+          <p class="desc">I have been coding for almost 5 years. Knows how to code C, C++, Java, and Python.
+            I am also familiar with Object Oriented Programming. Served as a peer tutor for C and Java. Familiar with
+            the concepts of AI/ML for Python. Currently immersed in front-end web development. I have been immersed to these technologies, and reviewing them wouldn't be a problem.
+            You know what they say, always prepare different weapons for a war.<br>
+          </p>
+        </td>
+        <td>
+          <div class="techstack">
+            <img src="techstack/HTML.png">
+            <img src="techstack/CCS3.png">
+            <img src="techstack/C++.png">
+            <img src="techstack/C.png">
+            <img src="techstack/JS.png">
+            <img src="techstack/Java.png">
+            <img src="techstack/NodeJs.png">
+            <img src="techstack/React.png">
+            <img src="techstack/Java Android.png">
+            <img src="techstack/Firebase.png">
+            <img src="techstack/ReactFirebase.png">
+            <img src="techstack/Gatsby.png">
+            <img src="techstack/Python.png">
+            <img src="techstack/PHP.png">
+            <img src="techstack/MySQL.png">
+          </div>
 
-      <h2 class="sktitle">My Tech Stack</h2>
-      <p class="desc">I have been immersed to these technologies, and reviewing them wouldn't be a problem.
-        You know what they say, always prepare different weapons for a war.<br>
-      </p>
-      <div class="techstack">
-        <img src="techstack/HTML.png">
-        <img src="techstack/CCS3.png">
-        <img src="techstack/C++.png">
-        <img src="techstack/C.png">
-        <img src="techstack/JS.png">
-        <img src="techstack/Java.png">
-        <img src="techstack/NodeJs.png">
-        <img src="techstack/React.png">
-        <img src="techstack/Java Android.png">
-        <img src="techstack/Firebase.png">
-        <img src="techstack/ReactFirebase.png">
-        <img src="techstack/Gatsby.png">
-        <img src="techstack/Python.png">
-        <img src="techstack/PHP.png">
-        <img src="techstack/MySQL.png">
-      </div>
+        </td>
+      </tr>
+      </table>
+
+
 
       <h2 class="sktitle">Content Making and Writing</h2>
       <p class="desc">I really like to write, and I took advantage of this skill when I was the Internal Relations Officer
@@ -157,8 +164,15 @@
   </section>
 
 
-  <p></p>
+  <!--contact-->
+  <section class="connect" id="connect">
+    <div class="max-width">
+      <h1 class="title">Let's Connect!</h1>
+      <p class="desc">
 
+      </p>
+
+  </section>
 </body>
 
 </html>
