--- a/index.html
+++ b/index.html
@@ -43,12 +43,34 @@
   <script src="script.js"></script>
 
   <!-- about me! -->
+
   <section class="me" id="me">
     <div class="max-width">
+
       <h2 class="title">Who? Me?</h2>
-      <div class="about-me">
-        <p>I am Jeph. Currently an undergraduate student seeking an internship to enhance my skills in coding, and everything dev</p>
+      <div class="side">
+        <div class="about-me">
+          <p>I am Jeph. Currently an undergraduate student seeking an internship to enhance my skills in coding, and everything dev</p>
+        </div>
+        <!--
+        <div class="photos">
+          <img src="photos/1.png" />
+          <img src="photos/2.jpeg" />
+          <img src="photos/3.jpg" />
+          <img src="photos/4.jpeg" />
+          <img src="photos/1.png" />
+          <img src="photos/2.jpeg" />
+          <img src="photos/3.jpg" />
+          <img src="photos/4.jpeg" />
+          <img src="photos/1.png" />
+          <img src="photos/2.jpeg" />
+          <img src="photos/3.jpg" />
+          <img src="photos/4.jpeg" />
+
+        </div>
+      -->
       </div>
+
     </div>
   </section>
 
@@ -118,35 +140,44 @@
   <!-- xp -->
   <section class="skills" id="skills">
     <div class="max-width">
-      <h1 class="title">skills and professional development</h1>
-      <h2 class="sktitle">Coding and Development</h2>
-      <p class="desc">I have been coding for almost 7 years. Knows how to code C, C++, Java, and Python.
-        I am also familiar with Object Oriented Programming. I have also served as a peer tutor for C and Java.  Currently immersed in web development. I have been immersed to these technologies, and reviewing them wouldn't be a problem.
-        You know what they say, always prepare different weapons for a war.<br>
-      </p>
-      <div class="techstack">
-        <img src="techstack/HTML.png">
-        <img src="techstack/CCS3.png">
-        <img src="techstack/C++.png">
-        <img src="techstack/C.png">
-        <img src="techstack/JS.png">
-        <img src="techstack/Java.png">
-        <img src="techstack/NodeJs.png">
-        <img src="techstack/React.png">
-        <img src="techstack/Java Android.png">
-        <img src="techstack/Firebase.png">
-        <img src="techstack/ReactFirebase.png">
-        <img src="techstack/Gatsby.png">
-        <img src="techstack/Python.png">
-        <img src="techstack/PHP.png">
-        <img src="techstack/MySQL.png">
+      <div class="wrap">
+        <div class="left">
+          <h1 class="title">skills and professional development</h1>
+          <h2 class="sktitle">Coding and Development</h2>
+          <p class="desc">I have been coding for almost 7 years. Knows how to code C, C++, Java, and Python.
+            I am also familiar with Object Oriented Programming. I have also served as a peer tutor for C and Java.  Currently immersed in web development. Familiar with the concepts of AI/ML for Python.. I have been immersed to these technologies, and reviewing them wouldn't be a problem.
+            You know what they say, always prepare different weapons for a war.<br>
+          </p>
+
+          <h2 class="sktitle">Content Making and Writing</h2>
+          <p class="desc">I really like to write, and I took advantage of this skill when I was the Internal Relations Officer
+            of Google Developer Student Clubs USTP to make comprehensive and concise reports. Writing blogs and always trying
+            not to bore my audience when I am presenting has always been something that I enjoy doing. <br>
+          </p>
+
+        </div>
+
+        <div class="right">
+          <div class="techstack">
+            <img src="techstack/HTML.png">
+            <img src="techstack/CCS3.png">
+            <img src="techstack/C++.png">
+            <img src="techstack/C.png">
+            <img src="techstack/JS.png">
+            <img src="techstack/Java.png">
+            <img src="techstack/NodeJs.png">
+            <img src="techstack/React.png">
+            <img src="techstack/Java Android.png">
+            <img src="techstack/Firebase.png">
+            <img src="techstack/ReactFirebase.png">
+            <img src="techstack/Gatsby.png">
+            <img src="techstack/Python.png">
+            <img src="techstack/PHP.png">
+            <img src="techstack/MySQL.png">
+          </div>
+        </div>
       </div>
 
-      <h2 class="sktitle">Content Making and Writing</h2>
-      <p class="desc">I really like to write, and I took advantage of this skill when I was the Internal Relations Officer
-        of Google Developer Student Clubs USTP to make comprehensive and concise reports. Writing blogs and always trying
-        not to bore my audience when I am presenting has always been something that I enjoy doing. <br>
-      </p>
 
 
   </section>
