--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <ul class="menu">
         <li><a href="#home">home</a></li>
         <li><a href="#me">me</a></li>
-        <li><a href="#xp">xp</a></li>
         <li><a href="#skills">skills</a></li>
+        <li><a href="#xp">xp</a></li>
         <li><a href="#projects">projects</a></li>
         <li><a href="#connect">connect</a></li>
       </ul>
@@ -50,7 +50,7 @@
       <h2 class="title">Who? Me?</h2>
       <div class="side">
         <div class="about-me">
-          <p>I am Jeph. Currently an undergraduate student seeking an internship to enhance my skills in coding, and everything dev</p>
+          <p>I am Jeph. Currently an undergraduate student seeking an internship to enhance my skills in coding, and everything dev. I love to learn anything, and I am currently climing my way to become a good, ever-learning, software and web developer.</p>
         </div>
         <!--
         <div class="photos">
@@ -74,79 +74,18 @@
     </div>
   </section>
 
-  <!-- xp -->
-  <section class="xp" id="xp">
-    <div class="max-width">
-      <h1 class="title">experiences and involvements</h1>
-      <h2 class="org-title">Google Developer Student Clubs USTP</h2><br>
-      <div class="xp-inv">
-        <div class="left">
-          <img src="org-logos/GDSC.png" alt="Google Developer Student Clubs USTP">
-        </div>
-        <div class="right">
-          <p>Google Developer Student Clubs USTP's mission is to bridge the gap between theory and practice.
-            Currently the Chief Community Development Officer, and the former Acting Chief Technology Officer,
-            and Internal Relations Officer.</p>
-          <!-- <a href="">GDSC USTP Facebook Page</a>-->
-        </div>
-      </div>
 
-      <h2 class="org-title">WeCARE</h2><br>
-      <div class="xp-inv">
-        <div class="left">
-          <img src="org-logos/WECARE.png" alt="We CARE USTP">
-        </div>
-        <div class="right">
-          <p>A university-recognized extra-curricular organization that has the mission to help
-            fellow students with their mental health. Currently the Chief Technology Officer
-            for the Android-iOS mobile application.</p>
-          <!-- <a href="">GDSC USTP Facebook Page</a>-->
-        </div>
-      </div>
-
-      <h2 class="org-title">Federation of Accredited Extra-Curricular Student Organizations USTP</h2><br>
-      <div class="xp-inv">
-        <div class="left">
-          <img src="org-logos/FAESO2.png" alt="FAESO USTP">
-        </div>
-        <div class="right">
-          <p>Currently serving as a Junior Deputy. FAESO USTP is the mother organization of all Extra-Curricular Student Organizations
-            in the University of Science and Technology of Southern Philippines.
-            The organization and its members support and collaborate with all accredited extra-curricular organizations
-            to support their respective mission, vision, and goals</p>
-          <!-- <a href="">GDSC USTP Facebook Page</a>-->
-        </div>
-      </div>
-
-      <h2 class="org-title">Institute of Computer Engineers of the Philippines - Student Edition USTP</h2><br>
-      <div class="xp-inv">
-        <div class="left">
-          <img src="org-logos/ICPEP.png" alt="FAESO USTP">
-        </div>
-        <div class="right">
-          <p>A nationally-recognized Computer Engineering organization that is part of ICPEP Region X. Served as
-            the USTP chapter's Public Information Officer Internal, and currently a Volunter Resources Head, and
-            the organization's website project manager for two years... and counting.
-          </p>
-          <!-- <a href="">GDSC USTP Facebook Page</a>-->
-        </div>
-      </div>
-
-
-    </div>
-
-  </section>
-
-  <!-- xp -->
+  <!-- skills -->
   <section class="skills" id="skills">
     <div class="max-width">
-      <div class="wrap">
         <div class="left">
           <h1 class="title">skills and professional development</h1>
           <h2 class="sktitle">Coding and Development</h2>
-          <p class="desc">I have been coding for almost 7 years. Knows how to code C, C++, Java, and Python.
-            I am also familiar with Object Oriented Programming. I have also served as a peer tutor for C and Java.  Currently immersed in web development. Familiar with the concepts of AI/ML for Python.. I have been immersed to these technologies, and reviewing them wouldn't be a problem.
-            You know what they say, always prepare different weapons for a war.<br>
+          <p class="desc">I have been coding for almost 7 years. In those seven years, I have learned basic HTML, CSS, and JavaScript, and taught others in Java, C++, and C. Worked on projects involving basic Artificial Intelligence with familiarity in Python, Android App development in Java, and React Native. Also experienced ReactJS, GatsbyJS, PHP, MySQL, Firebase, Google Maps API, <br>
+          </p>
+
+          <h2 class="sktitle">Design and Prototyping</h2>
+          <p class="desc">Colors before code is, for me, an important thing. I like to design and envision applications or web designs. I am experienced in prototyping applications such as Figma, and Adobe XD, and designing publication materials with the knowledge of the importance of branding, and concepts and theories of colors.<br>
           </p>
 
           <h2 class="sktitle">Content Making and Writing</h2>
@@ -178,11 +117,70 @@
         </div>
       -->
       </div>
+ </section>
+
+ <!-- xp -->
+ <section class="xp" id="xp">
+   <div class="max-width">
+     <h1 class="title">experiences and involvements</h1>
+     <h2 class="org-title">Google Developer Student Clubs USTP</h2><br>
+     <div class="xp-inv">
+       <div class="left">
+         <img src="org-logos/GDSC.png" alt="Google Developer Student Clubs USTP">
+       </div>
+       <div class="right">
+         <p>Google Developer Student Clubs USTP's mission is to bridge the gap between theory and practice.
+           Currently the Chief Community Development Officer, and the former Acting Chief Technology Officer,
+           and Internal Relations Officer.</p>
+         <!-- <a href="">GDSC USTP Facebook Page</a>-->
+       </div>
+     </div>
+
+     <h2 class="org-title">WeCARE</h2><br>
+     <div class="xp-inv">
+       <div class="left">
+         <img src="org-logos/WECARE.png" alt="We CARE USTP">
+       </div>
+       <div class="right">
+         <p>A university-recognized extra-curricular organization that has the mission to help
+           fellow students with their mental health. Currently the Chief Technology Officer
+           for the Android-iOS mobile application.</p>
+         <!-- <a href="">GDSC USTP Facebook Page</a>-->
+       </div>
+     </div>
+
+     <h2 class="org-title">Federation of Accredited Extra-Curricular Student Organizations USTP</h2><br>
+     <div class="xp-inv">
+       <div class="left">
+         <img src="org-logos/FAESO2.png" alt="FAESO USTP">
+       </div>
+       <div class="right">
+         <p>Currently serving as a Junior Deputy. FAESO USTP is the mother organization of all Extra-Curricular Student Organizations
+           in the University of Science and Technology of Southern Philippines.
+           The organization and its members support and collaborate with all accredited extra-curricular organizations
+           to support their respective mission, vision, and goals</p>
+         <!-- <a href="">GDSC USTP Facebook Page</a>-->
+       </div>
+     </div>
+
+     <h2 class="org-title">Institute of Computer Engineers of the Philippines - Student Edition USTP</h2><br>
+     <div class="xp-inv">
+       <div class="left">
+         <img src="org-logos/ICPEP.png" alt="FAESO USTP">
+       </div>
+       <div class="right">
+         <p>A nationally-recognized Computer Engineering organization that is part of ICPEP Region X. Served as
+           the USTP chapter's Public Information Officer Internal, and currently a Volunter Resources Head, and
+           the organization's website project manager for two years... and counting.
+         </p>
+         <!-- <a href="">GDSC USTP Facebook Page</a>-->
+       </div>
+     </div>
 
 
+   </div>
 
-  </section>
-
+ </section>
 
   <!--contact-->
   <section class="connect" id="connect">
