rearranged skills section

--- a/index.html
+++ b/index.html
@@ -73,40 +73,19 @@
       <h1 class="title">skills and professional development</h1>
       <div class="wrap">
         <div class="left">
-
-          <h2 class="sktitle">Coding and Development</h2>
-          <p class="desc">I have been coding for almost 7 years. In those seven years, I have learned basic HTML, CSS, and JavaScript, and taught fellow students Java, C++, and C. Worked on projects involving basic Artificial Intelligence with
-            familiarity
-            in Python, Android App development in Java, and React Native. Also experienced ReactJS, GatsbyJS, PHP, MySQL, Firebase, Google Maps API, <br>
-          </p>
-
-          <h2 class="sktitle">Design and Prototyping</h2>
-          <p class="desc">Colors before code is, for me, an important thing. I like to design and envision applications or web designs. I am experienced in prototyping applications such as Figma, and Adobe XD, and designing publication materials with
-            the knowledge of the importance of branding, concepts and theories of colors.<br>
-          </p>
-
-          <h2 class="sktitle">Content Making and Writing</h2>
-          <p class="desc">I really like to write, and I took advantage of this skill when I was the Internal Relations Officer
-            of Google Developer Student Clubs USTP to make comprehensive and concise reports. Writing blogs and always trying
-            not to bore my audience when I am presenting has always been something that I enjoy doing. <br>
-          </p>
-
-        </div>
-
-        <div class="right">
-          <h2 class="sktitle2">Web Development and Database</h2>
-          <div class="techstack">
+          <h2 class="sktitle">Web Development and Database</h2>
+          <div class="techstack" style="margin-bottom: 35px">
             <img src="techstack/JS.png">
-            <img src="techstack/NodeJS.png">
+            <img src="techstack/NodeJs.png">
             <img src="techstack/React.png">
             <img src="techstack/Firebase.png">
-            <img src="techstack/TypeScript.png">
+            <img src="techstack/Typescript.png">
             <img src="techstack/PHP.png">
             <img src="techstack/MySQL.png">
           </div>
 
-          <h2 class="sktitle2">Programming and Basic AI</h2>
-          <div class="techstack">
+          <h2 class="sktitle">Programming and Basic AI</h2>
+          <div class="techstack" style="margin-bottom: 35px">
             <img src="techstack/Java.png">
             <img src="techstack/C.png">
             <img src="techstack/C++.png">
@@ -114,14 +93,44 @@
             <img src="techstack/Java Android.png">
           </div>
 
-          <h2 class="sktitle2">Design and Graphics</h2>
-          <div class="techstack">
+          <h2 class="sktitle">Design and Graphics</h2>
+          <div class="techstack" style="margin-bottom: 35px">
             <img src="techstack/Figma.png">
             <img src="techstack/XD.png">
             <img src="techstack/Canva.png">
             <img src="techstack/DaVinci.png">
             <img src="techstack/PS.png">
+            <img src="techstack/Vectornator.png">
           </div>
+
+        </div>
+
+        <div class="right">
+          <h2 class="sktitle">Coding and Development</h2>
+          <ul class="desc">
+            <li>○ <span STYLE="text-decoration:underline">Seven years</span> of coding experience</li>
+            <li>○ <span STYLE="text-decoration:underline">Two years</span> teaching experience</li>
+            <li>○ Worked on projects involving <span STYLE="text-decoration:underline">AI using Python</span></li>
+            <li>○ <span STYLE="text-decoration:underline">Mobile app</span> development using: </li>
+              <ul>
+                <li>        Android Java with Google Maps API, and Firebase</li>
+                <li>        React Native with Firebase</li>
+              </ul>
+          </ul>
+
+          <h2 class="sktitle">Design, Conceptualization and Prototyping</h2>
+          <ul class="desc">
+            <li>○ Lorem ipsum marie ann rose</li>
+            <li>○ Lorem ipsum marie ann rose</li>
+            <li>○ Lorem ipsum marie ann rose</li>
+            <li>○ Lorem ipsum marie ann rose</li>
+            <li>○ Lorem ipsum marie ann rose</li>
+            <li>○ Lorem ipsum marie ann rose</li>
+            <li>○ Lorem ipsum marie ann rose</li>
+          </ul>
+
+
+
 
         </div>
       </div>
@@ -135,12 +144,13 @@
   <section class="xp" id="xp">
     <div class="max-width">
       <h1 class="title">experiences and involvements</h1>
-      <h2 class="org-title">Google Developer Student Clubs USTP</h2><br>
+
       <div class="xp-inv">
         <div class="left">
           <img src="org-logos/GDSC.png" alt="Google Developer Student Clubs USTP">
         </div>
         <div class="right">
+          <h2 class="org-title">Google Developer Student Clubs USTP</h2><br>
           <p>Google Developer Student Clubs USTP's mission is to bridge the gap between theory and practice.
             Currently the Chief Community Development Officer, and the former Acting Chief Technology Officer,
             and Internal Relations Officer.</p>
@@ -148,12 +158,12 @@
         </div>
       </div>
 
-      <h2 class="org-title">WeCARE</h2><br>
       <div class="xp-inv">
         <div class="left">
           <img src="org-logos/WECARE.png" alt="We CARE USTP">
         </div>
         <div class="right">
+          <h2 class="org-title">WeCARE</h2><br>
           <p>A university-recognized extra-curricular organization that has the mission to help
             fellow students with their mental health. Currently the Chief Technology Officer
             for the Android-iOS mobile application.</p>
@@ -161,12 +171,13 @@
         </div>
       </div>
 
-      <h2 class="org-title">Federation of Accredited Extra-Curricular Student Organizations USTP</h2><br>
+
       <div class="xp-inv">
         <div class="left">
           <img src="org-logos/FAESO2.png" alt="FAESO USTP">
         </div>
         <div class="right">
+          <h2 class="org-title">Federation of Accredited Extra-Curricular Student Organizations USTP</h2><br>
           <p>Currently serving as a Junior Deputy. FAESO USTP is the mother organization of all Extra-Curricular Student Organizations
             in the University of Science and Technology of Southern Philippines.
             The organization and its members support and collaborate with all accredited extra-curricular organizations
@@ -175,12 +186,13 @@
         </div>
       </div>
 
-      <h2 class="org-title">Institute of Computer Engineers of the Philippines - Student Edition USTP</h2><br>
+
       <div class="xp-inv">
         <div class="left">
           <img src="org-logos/ICPEP.png" alt="FAESO USTP">
         </div>
         <div class="right">
+          <h2 class="org-title">Institute of Computer Engineers of the Philippines - Student Edition USTP</h2><br>
           <p>A nationally-recognized Computer Engineering organization that is part of ICPEP Region X. Served as
             the USTP chapter's Public Information Officer Internal, and currently a Volunter Resources Head, and
             the organization's website project manager for two years... and counting.
@@ -197,7 +209,7 @@
   <!--contact-->
   <section class="connect" id="connect">
     <div class="max-width">
-      <h1 class="title">Let's Connect!</h1>
+      <h1 class="title">Connect</h1>
       <p class="desc">
 
       </p>
